# loxInFlux

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: main.yml
config/: default_config.toml
src/loxInFlux/: __init__.py  __main__.py  app.py  argparser.py  config.py  grabber.py  logger.py  miniserver.py  telegraf.py  utils.py
src/loxwebsocket/: lox_ws_api.py
