[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loxInFlux"
version = "0.2.0"
description = "Loxone to InfluxDB Bridge"
authors = [
    { name = "Jakob Gliwa", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pycryptodome>=3.23.0",
    "lxml>=6.0.2",
    "lz4>=4.4.5",
    "influxdb-client>=1.49.0",
    "aioftp>=0.27.2",
    "aiofiles>=25.1.0",
    "orjson>=3.11.5",
    "uvloop>=0.22.1",
    "aiohttp>=3.13.3",
    "tomli>=2.3.0",
    "gmqtt>=0.7.0",
    "construct>=2.10.70",
    "loxwebsocket>=0.5.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "setuptools>=69.0.0"
]

[project.scripts]
loxInFlux = "loxInFlux.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]   

[tool.uv]
native-tls = true

[tool.hatch.build.targets.wheel]
packages = ["src/loxInFlux"]